# flask

./: feed1.csv  model.pkl  preprocess_data.py  pyproject.toml  requirements.txt  roulette_data.csv  server.py  train_model.py
.devcontainer/: devcontainer.json
static/: app.css  app.js  index.html  model.pkl
