[project]
name = "my_flask_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "eventlet>=0.38.2",
    "exceptiongroup==1.2.2",
    "flask==3.1.0",
    "flask-cors>=5.0.0",
    "flask-socketio==5.5.1",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "lightgbm==4.5.0",
    "markupsafe==3.0.2",
    "numpy>=1.17.3,<2.0",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pycparser==2.22",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "python-engineio==4.11.2",
    "python-socketio==5.12.1",
    "requests==2.32.3",
    "scikit-learn==1.3.2",
    "scipy==1.15.0",
    "selenium==4.27.1",
    "simple-websocket==1.1.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "threadpoolctl==3.5.0",
    "trio==0.28.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
